--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,7 @@
 <project>
-<modelVersion>4.0.0</modelVersion>
-  <groupId>com.javatpoint.application1</groupId>
-  <artifactId>my-app</artifactId>
-  <version>1</version>
+  <modelVersion>4.0.0</modelVersion>
+    <groupId>com.maha</groupId>
+    <artifactId>mahaLogin</artifactId>
+    <packaging>jar</packaging>
+    <version>2.0</version>
 </project>
